// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceCardsList renders a list of license cards 1`] = `
<div>
  <div
    class="d-flex justify-content-between align-items-center"
  >
    <h4>
      Instance license
    </h4>
     
    <gl-button-stub
      class="my-3 js-add-license"
      href="/newLicensePath"
      variant="success"
    >
      
      Add license
    
    </gl-button-stub>
  </div>
   
  <ul
    class="license-list list-unstyled"
  >
    <li>
      <license-card-stub
        iscurrentlicense="true"
        license="[object Object]"
      />
    </li>
    <li>
      <license-card-stub
        license="[object Object]"
      />
    </li>
  </ul>
</div>
`;

exports[`InstanceCardsList renders a message when there are no licenses 1`] = `
<div>
  <div
    class="d-flex justify-content-between align-items-center"
  >
    <h4>
      Instance license
    </h4>
     
    <gl-button-stub
      class="my-3 js-add-license"
      href="/newLicensePath"
      variant="success"
    >
      
      Add license
    
    </gl-button-stub>
  </div>
   
  <ul
    class="license-list list-unstyled"
  >
    <li>
      <strong>
        
        No licenses found.
      
      </strong>
    </li>
  </ul>
</div>
`;

exports[`InstanceCardsList renders a skeleton loading card if loading licenses 1`] = `
<div>
  <div
    class="d-flex justify-content-between align-items-center"
  >
    <h4>
      Instance license
    </h4>
     
    <gl-button-stub
      class="my-3 js-add-license"
      href="/newLicensePath"
      variant="success"
    >
      
      Add license
    
    </gl-button-stub>
  </div>
   
  <ul
    class="license-list list-unstyled"
  >
    <li>
      <skeleton-license-card-stub />
    </li>
  </ul>
</div>
`;
